--- a/src/Features.css
+++ b/src/Features.css
@@ -1,6 +1,6 @@
 .features {
     position: relative;
-    top: 100px;
+    top: 110px;
 }
 
 .features-title {
@@ -9,34 +9,39 @@
     font-weight: normal;
     font-size: 48px;
     line-height: 65px;
-
     text-align: center;
-
     color: #000000;
 }
 
 .features-container {
     display: flex;
-    margin: 20px;
+    margin: 80px;
+    height: 400px;/*height of the renters container box*/
 }
 
 .features-description-red {
     background: #CC4555;
     flex-direction: row;
-    flex: 3;
+    flex: 15;
+    height: 400px;
+
 }
 
 .features-description-orange {
     background: #EB9A60;
     flex-direction: row;
-    flex: 3;
+    flex: 4;
+    height: 300px;
 }
 
-.features-renters {
+.features-renters {  /*the landlords box*/
     display: flex;
+    flex-direction: column;
     background: rgba(0, 0, 0, 0.92);
     flex-direction: row;
     flex: 1;
+    height: 300px;
+
 }
 
 .features-renters-title {
@@ -45,7 +50,6 @@
     font-weight: bold;
     font-size: 72px;
     line-height: 86px;
-
     color: #00DDDD;
     margin: auto;
 }
@@ -56,7 +60,7 @@
     font-weight: bold;
     font-size: 48px;
     line-height: 65px;
-    
+
     color: #000000;
     margin: auto;
 }
@@ -67,7 +71,7 @@
     font-weight: normal;
     font-size: 37px;
     line-height: 50px;
-    
+
     color: #FFFFFF;
     margin: auto;
 }
