--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,12 +3,15 @@
     top: -10px;
     background:white;
     z-index: 1;
+    border-bottom: 2.5px solid #000000;
+    background-color: #dec9c8;
+    /*border-color: #000000; unecessary due to border-bottom*/
 }
 
 .nav-menu {
     display: grid;
     grid-template-columns: repeat(5,auto);
-    grid-gap: 20px;
+    grid-gap: 50px;
     list-style: none;
     text-align: center;
     width: 90vw;
@@ -16,14 +19,19 @@
     margin-right: 20rem; /*Changed margin-right from 2rem */
     cursor: pointer;
 }
-
+.header {
+  background-color: #F1F1F1;
+  text-align: center;
+  padding: 20px;
+}
 .nav-title {
     font-family: Open Sans;
     font-style: normal;
     font-weight: normal;
     font-size: 70px;
     line-height: 95px;
-    
+
+
     color: #000000;
 }
 
@@ -33,6 +41,6 @@
     font-weight: normal;
     font-size: 32px;
     line-height: 44px;
-    
+
     color: #000000;
 }
