--- a/src/Video.css
+++ b/src/Video.css
@@ -1,13 +1,16 @@
 .video-video {
+  margin-left: 50vw;
+  transform: translate(-50%);
 }
 
 .video-title {
+
     font-family: Open Sans;
     font-style: normal;
     font-weight: normal;
     font-size: 64px;
     line-height: 87px;
     text-align: center;
-    
+
     color: #000000;
 }
