--- a/src/Video.css
+++ b/src/Video.css
@@ -7,10 +7,9 @@
 
     font-family: Open Sans;
     font-style: normal;
-    font-weight: normal;
-    font-size: 64px;
-    line-height: 87px;
+    font-weight: bolder;
+    font-size: 45px;
+    line-height: 67px;
     text-align: center;
-
     color: #000000;
 }
